# rs-es

./: Cargo.toml
src/: error.rs  lib.rs  units.rs
src/operations/: bulk.rs  delete.rs  delete_index.rs  mapping.rs  mod.rs  refresh.rs
src/operations/search/: count.rs  mod.rs
src/operations/search/aggregations/: bucket.rs  common.rs  mod.rs
src/query/: compound.rs  functions.rs  mod.rs
