[package]
name = "rs-es"
version = "0.12.3"
authors = ["Ben Ashford"]
license = "Apache-2.0"
repository = "https://github.com/benashford/rs-es"
description = "Client for the ElasticSearch REST API"
readme = "README.md"
keywords = ["elasticsearch", "elastic"]
exclude = [".gitignore", ".travis.yml", "docker-compose.yml"]
edition = "2018"

[features]
default = []
es5 = []
geo = ["geojson"]

[lib]
name = "rs_es"

[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
log = "0.4"
serde_json = "1.0"
serde = {version = "1", features = ["derive"]}
geojson = { version="0.22", optional=true}
thiserror = "1.0.20"
url = "2.1"

[dev-dependencies]
env_logger = "0.7"
regex = "1.3"
doc-comment = "0.3"
